--- a/angular.json
+++ b/angular.json
@@ -26,13 +26,21 @@
             ],
             "styles": [
               "src/styles.css",
-              "src/assets/css/theme.css",
               "src/assets/vendor/animate/animate.css",
               "src/assets/vendor/owl-carousel/css/owl.carousel.css",
+              "src/assets/css/theme.css",
               "src/assets/css/bootstrap.css",
               "src/assets/css/maicons.css"
             ],
-            "scripts": []
+            "scripts": [
+              "src/assets/js/jquery-3.5.1.min.js",
+              "src/assets/js/bootstrap.bundle.min.js",
+              "src/assets/js/google-maps.js",
+              "src/assets/js/theme.js",
+              "src/assets/vendor/owl-carousel/js/owl.carousel.js",
+              "src/assets/vendor/owl-carousel/js/owl.carousel.min.js",
+              "src/assets/vendor/wow/wow.min.js"
+            ]
           },
           "configurations": {
             "production": {
